created a Workouts page

--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -60,3 +60,19 @@
   text-align: 250px;
 }
 
+  body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .table-container {
+    border: 2px solid black;
+    padding: 20px;
+  }
+
+  .table {
+    width: 100%;
+  }
